@@ -7,7 +7,7 @@ Maintainer: Deepayan Sarkar <deepayan.sarkar@r-project.org>
 Description: Extra graphical utilities based on lattice
 Depends: R (>= 2.5.0), RColorBrewer, lattice
 Imports: lattice (>= 0.16-3), grid
-Suggests: maps, mapproj, deldir, tripack
+Suggests: maps, mapproj, deldir, tripack, quantreg
 URL: http://latticeextra.r-forge.r-project.org/
 LazyLoad: yes
 LazyData: no
